# txs-eng

./: Cargo.toml  README.md
benches/: engine.rs  result.md
src/: amount.rs  csv.rs  lib.rs  main.rs  model.rs
src/engine/: error.rs  mod.rs  state.rs
tests/: e2e.rs
tests/fixtures/: valid.csv  with_errors.csv
